--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
             <label><input type="radio" name="mode" value="cluster" checked> Dendrogram</label>
             <label><input type="radio" name="mode" value="tree"> Tree</label>
         </form>
-        <select id="selectButton" class="custom-select"></select>
-        <div id="activitySphereOnOffenseMomentName"></div>
+        <select id="district_selector">
+            <option value="Западный военный округ">Западный военный округ</option>
+            <option value="Північний флот">Північний флот</option>
+            <option value="Східний військовий округ">Східний військовий округ</option>
+            <option value="Центральный военный округ">Центральный военный округ</option>
+            <option value="Южный военный округ">Южный военный округ</option>
+        </select>
+
         <div class="main_grid">
             <div class="box1">
                 <div id="ierarchy"></div>
