--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             try {
                                 photo[i].onmouseover = function() {
                                     elements = document.getElementsByClassName(d.unit)
-                                        //console.log(elements)
+                                    console.log(elements)
                                     for (var i = 0; i < elements.length; i++) {
                                         //console.log(elements[i])
                                         elements[i].style.color = 'red';
