--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
                 function options() {
 
                     criminals = document.getElementsByClassName("Yes")
-                    console.log(criminals)
+                        //console.log(criminals)
 
                     for (var i = 0; i < criminals.length; i++) {
                         if (criminals[i].localName == 'circle') {
-                            console.log(criminals[i].localName)
-                            console.log(criminals[i])
-                                //console.log("criminals: " + i)
+                            //console.log(criminals[i].localName)
+                            //console.log(criminals[i])
+                            //console.log("criminals: " + i)
                             criminals[i].style.color = 'red';
                             criminals[i].style.stroke = 'red';
+                        } else if (criminals[i].localName == 'text') {
+                            //criminals[i].style.color = 'red';
+                            criminals[i].style.fill = "red";
                         } else {
-                            console.log('not_circle')
+                            //console.log('not_circle')
                         }
 
                     }
@@ -72,38 +75,73 @@
                                 try { // для кожного елементу із списку класів додаємо властивість, якщо елемента немає в списку - пропускаємо
                                     photo[i].onmouseover = function() {
                                         elements = document.getElementsByClassName(d.unit)
-                                        console.log(elements)
+                                            //console.log(elements)
                                             //texts = elements.selectAll('text')
                                             //console.log(texts)
+
                                         for (var i = 0; i < elements.length; i++) {
+                                            //console.log(elements[i])
                                             if (elements[i].localName == 'circle') {
                                                 //console.log("circle")
                                                 //elements[i].style.color = 'green';
-                                                elements[i].style.stroke = 'red';
+                                                //elements[i].style.stroke = 'red';
                                                 elements[i].style.r = "10"
                                             } else if (elements[i].localName == 'text') {
                                                 //console.log("text")
                                                 elements[i].style.color = 'red';
                                                 elements[i].style.stroke = 'red'
                                                 elements[i].style.font = "14px sans-serif";
-                                            } else if (elements[i].localName == 'path') {
+                                            } else if (elements[i].localName == 'path') { // Лінії на карті приховані, і підсвічуються лише при наведенні
                                                 //console.log("path")
                                                 elements[i].style.strokewidth = "5px";
                                                 elements[i].style.stroke = 'red';
                                                 elements[i].style.opacity = "1";
                                             } else {}
+                                            //підсвічуємо назв населених пунктів та точки в Україні
                                             //console.log(elements[i])
-                                            //console.log(elements[i])
-                                            /*elements[i].style.color = 'red';
-                                            elements[i].style.stroke = 'red';
-                                            elements[i].style.font = "14px sans-serif";
-                                            elements[i].style.r = "10";
-                                            elements[i].style.strokewidth = "7"; */
+                                            var myClass = this.classList;
+                                            console.log(myClass[0]);
+                                            //text_label = map_svg.selectAll(myClass[0] + " text_explainer")
+                                            text_label = document.getElementsByClassName(myClass[0] + " text-explainer")
+                                            console.log(text_label[0])
+                                            text_label[0].style.opacity = "1";
+
+                                            try {
+                                                war_point = document.getElementsByClassName(myClass[0] + " war-point")
+                                                war_point[0].style.opacity = "1";
+                                            } catch {}
+
+                                            try {
+                                                war_explainer = document.getElementsByClassName(myClass[0] + " war-explainer")
+                                                war_explainer[0].style.opacity = "1";
+                                            } catch {}
+                                            //war_point = document.getElementsByClassName(myClass[0] + " war_point")
+                                            //war_point[0].style.opacity = "1";
+
+                                            //war_explainer = document.getElementsByClassName(myClass[0] + " war_explainer")
+                                            //war_point[0].style.opacity = "1";
+
+                                            //text_explainer = document.getElementsByClassName(myClass[0] + " text_explainer")
+                                            //console.log(text_explainer)
+                                            //map_circles = 
+                                            //console.log(map_circles)
+                                            //map_circles = document.getElementsByClassName(myClass[0] + " map-circle")
+                                            //console.log(map_circles[0].parentNode)
+
+                                            //text_explainer = map_circles[0].parentNode
+                                            //text_explainer
+                                            //    .append("g")
+                                            //map_circles = document.getElementsByClassName("map-circle")
+                                            //map_circles = document.querySelector(elements[i] + " map-circle")
+                                            //console.log(map_circles)
+                                            /*for (var i = 0; i < map_circles.length; i++) {
+                                                console.log(map_circles[i])
+                                                console.log(map_circles.selelect(elements[i]))
+                                                    //if (map_circles[i].classList[0] === elements[i]) {
+                                                    //    console.log("map " + elements[i].classList[0])
+                                                    //} else {}
+                                            } */
                                         }
-                                        //elements.style.color = 'red';
-                                        //this.style.opacity = "1";
-                                        //this.style.stroke = 'red';
-                                        //this.style.strokewidth = "5";
                                     };
                                     photo[i].onmouseleave = function() {
                                         elements = document.getElementsByClassName(d.unit)
@@ -112,9 +150,9 @@
                                             //console.log(elements[i])
                                             if (elements[i].localName == 'circle') {
                                                 //console.log("circle")
-                                                elements[i].style.stroke = 'black';
+                                                //elements[i].style.stroke = 'black';
                                                 elements[i].style.r = "3"
-                                                elements[i].style.stroke = "None"
+                                                    //elements[i].style.stroke = "None"
                                                     //elements[i].style.color = 'black';
                                             } else if (elements[i].localName == 'text') {
                                                 //console.log("text")
@@ -127,11 +165,22 @@
                                                 elements[i].style.stroke = 'black';
                                                 elements[i].style.opacity = "0";
                                             } else {}
-                                            /*elements[i].style.color = 'black';
-                                            elements[i].style.stroke = 'black';
-                                            elements[i].style.font = "10px sans-serif";
-                                            elements[i].style.r = "3";
-                                            elements[i].style.strokewidth = "1"; */
+
+                                            // прибираємо підсвітку назв населених пунктів та точки в Україні
+                                            var myClass = this.classList;
+                                            console.log(myClass[0]);
+                                            //text_label = map_svg.selectAll(myClass[0] + " text_explainer")
+                                            text_label = document.getElementsByClassName(myClass[0] + " text-explainer")
+                                                //console.log(text_label[0])
+                                            text_label[0].style.opacity = "0"
+                                            try {
+                                                war_point = document.getElementsByClassName(myClass[0] + " war-point")
+                                                war_point[0].style.opacity = "0";
+                                            } catch {}
+                                            try {
+                                                war_explainer = document.getElementsByClassName(myClass[0] + " war-explainer")
+                                                war_explainer[0].style.opacity = "0";
+                                            } catch {}
                                         }
                                     }
                                     photo[i].onclick = function() { // додаємо функцію по кліку друкувати в консоль
