--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
                                     console.log(filtered_unit[0])
 
                                     text =
-                                        "Назва підрозділу: " +
-                                        filtered_unit[0].unit + "\n" +
-                                        "Підрозділ командування: " +
-                                        filtered_unit[0].division + "\n" +
-                                        "Місце дислокації: " + filtered_unit[0].city
+                                        "<b>Назва підрозділу:</b> " +
+                                        filtered_unit[0].unit + "<br>" +
+                                        "<b>Підрозділ командування:</b> " +
+                                        filtered_unit[0].division + "<br>" +
+                                        "<b>Місце дислокації:</b> " + filtered_unit[0].city
 
                                     console.log(text)
 
